Added Home and About static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,12 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, 'About Us') %>
+<h1>About Us</h1>
+<p>About this app:
+	<ul>
+		<li>Flavorites: an app like del.icio.us</li>
+		<li>Created by Matt Case</li>
+		<li>Ruby on Rails, Madison College</li>
+		<li>Fall semester of 2012</li>
+	</ul>
+</p>
+
+
