Finished layout and routes

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,18 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Url:</b>
-  <%= @bookmark.url %>
+  <b>Url:</b> <%= @bookmark.url %>
 </p>
 
 <p>
-  <b>Name:</b>
-  <%= @bookmark.name %>
+  <b>Name:</b> <%= @bookmark.name %>
 </p>
 
 <p>
-  <b>Saved:</b>
-  <%= @bookmark.saved %>
+  <b>Saved:</b> <%= @bookmark.saved %>
 </p>
 
 
