--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
-<% provide(:title, 'Home') %>
-<h1>Flavorites</h1>
-<p>
-	This is the home page for Flavorites, by Matt Case.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to Flavorites</h1>
 
+  <h2>
+    This is the home page for Flavorites, a bookmarks sharing app.
+  </h2>
+
+<!--   <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+ -->
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
