--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -12,16 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :url %><br />
-    <%= f.text_field :url %>
+    <%= f.label :url %> <%= f.text_field :url %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :name %> <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :saved %><br />
-    <%= f.date_select :saved %>
+    <%= f.label :saved %> <%= f.date_select :saved %>
   </div>
   <div class="actions">
     <%= f.submit %>
